[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mqtt_view"
description = "Viewers for MQTT information"
readme = "README.md"
license = "BSD 3-Clause License"
version = "1.0.0"
authors = ["Nathan Dyer <nathan@niftyprojects.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
flake9 = "^3.8.3"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
mqtt_viewrand = "mqtt_view.rand:main"
mqtt_viewstats = "mqtt_view.stats:main"

[tool.flake8]
ignore = "E203,E266,H106,H904,E133"
max-complexity = 25
hang-closing = true
max-doc-length = 88
max-line-length = 88
per-file-ignores = '*/__init__.py:F401'

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
line_length = 88
profile = "black"
multi_line_output = 3
py_version = 27
